--- a/package.json
+++ b/package.json
@@ -9,21 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.22.3",
-    "@react-native-community/datetimepicker": "^7.6.2",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/datetimepicker": "7.6.1",
+    "@react-native-firebase/app": "^19.0.1",
     "@react-native-firebase/database": "^19.0.1",
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "@types/react": "~18.2.45",
     "eas-cli": "^7.5.0",
-    "expo": "~50.0.8",
+    "expo": "^50.0.11",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.1",
+    "global": "^4.4.0",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-paper": "^5.12.3",
-    "react-native-safe-area-context": "^4.9.0",
+    "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "^3.29.0",
     "typescript": "^5.3.0"
   },
