--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "reactnatapp",
+  "name": "aluguel",
+  "displayName": "Aluguel",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
